added new files

--- a/UnitTestTweetFeed/UnitTestTweetFeed.csproj
+++ b/UnitTestTweetFeed/UnitTestTweetFeed.csproj
@@ -68,6 +68,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\tweetFeed\tweetFeed.csproj">
+      <Project>{c67054a6-3dfe-4c20-a69e-1afa569f269d}</Project>
+      <Name>tweetFeed</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
